# diffusers-recipes

./: .gitignore  README.md  benchmark.py  pyproject.toml
models/ltx2/: base_t2v_example.py  t2v_group_offloading.py  t2v_layerwise.py  t2v_sdnq-4bit-both_cpu_offload.py
models/ltx2/scripts/: t2v_base_example.py  t2v_layerwise.py  t2v_sdnq-4bit-both_cpu_offload.py
models/qwen-image-layered/: README.md
models/z-image/: README.md  benchmark_results.csv
models/z-image/scripts/: base_example.py  gguf_Q4_K_M.py  gguf_Q4_K_M_4bit_TE.py  gguf_Q4_K_M_4bit_TE_cpu_offload.py  gguf_Q4_K_M_4bit_TE_leaf_stream_group_offload_record.py  gguf_Q8_0.py  gguf_Q8_0_both.py  gguf_Q8_0_both_cpu_offload.py  gguf_Q8_0_cpu_offload.py  gguf_Q8_0_leaf_stream_group_offload_disk.py  gguf_Q8_0_leaf_stream_group_offload_record.py  layerwise.py  layerwise_pipeline_leaf_stream_group_offload.py  layerwise_pipeline_leaf_stream_group_offload_disk.py  lora.py  model_cpu_offload.py  pipeline_block_group_offload_one_block_stream_record.py  pipeline_block_group_offload_two_blocks.py  pipeline_leaf_group_offload.py  pipeline_leaf_stream_group_offload.py  pipeline_leaf_stream_group_offload_disk.py  pipeline_leaf_stream_group_offload_disk_record.py  pipeline_leaf_stream_group_offload_low_mem.py  pipeline_leaf_stream_group_offload_record.py  separate_steps.py  sequential_cpu_offload.py
